--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@
     text-decoration : none ;
     color : inherit ; 
  }
-
  nav{
     display : flex; 
     align-items : center ;
@@ -29,9 +28,7 @@
     margin-left : 15px; 
     font-size : 13px; 
     color : #c4c4c4;
-
   }
-
   .nav-country h1{
     color: #fff; 
     font-size: 14px; 
@@ -46,4 +43,50 @@
     max-width :1000px; 
     border-radius: 4px;
     margin-left : 15px; 
+  }
+
+  .nav-search-gategory{
+    display : flex ; 
+    align-items : center ; 
+    padding : 10px 20px; 
+    gap : 5px; 
+    background : #e5e5e5; 
+    border-radius : 4px 0 0 4px ; 
+  }
+
+  .nav-search-input {
+    border : none; 
+    outline : none ; 
+    padding-left : 20px; 
+    width : 100%; 
+
+  }
+
+  .nav-search-icon{
+    max-width: 41px; 
+    padding: 8px; 
+    background: #ffd64f; 
+    border-radius : 0 4px 4px 0 ; 
+  }
+  .nav-language{
+    display : flex; 
+    align-items : center; 
+    gap : 2px; 
+    font-weight : 600;
+    margin-left : 15px ; 
+  }
+  .nav-text{
+    margin-left : 15px; 
+  }
+  .nav-text p{
+    font-size : 10px; 
+  }
+
+  .nav-text h1{
+    font-size : 14px ; 
+  }
+  .nav-cart{
+    display : flex ; 
+    align-items : center; 
+    margin : 0px 15px;
   }
