--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@
     top:20%; 
     z-index : 1;
     background : #ffffff4f; 
+    padding :5vh 1vw;
     color: #0000007b; 
     text-decoration : none ; 
     font-weight: 600; 
