--- a/style.css
+++ b/style.css
@@ -160,3 +160,26 @@
   .header-box{
     margin-top : -20vw;
   }
+  .product-slider{
+    background: #fff; 
+    margin : 0 30px ; 
+    padding : 20px; 
+    margin-bottom : 15px; 
+  }
+  .product-slider .products{
+    display:flex ; 
+    overflow-x:auto ; 
+    gap: 20px ; 
+    margin-top : 10px ; 
+
+  }
+
+  .product-slider .products img{
+    max-width : 200px; 
+    max-height : 200; 
+
+  }
+
+  .product-slider .products::-webkit-scrollbar{
+    display : none; 
+  }
