--- a/style.css
+++ b/style.css
@@ -183,3 +183,63 @@
   .product-slider .products::-webkit-scrollbar{
     display : none; 
   }
+
+  .products-slider-with-price{
+    background: #fff; 
+    margin: 0 30px; 
+    padding : 20px ; 
+    margin-bottom: 15px; 
+  }
+
+  .products-slider-with-price .products{
+    display : flex; 
+    overflow-x : auto; 
+    gap : 10px; 
+    margin-top : 10px; 
+  }
+
+  .products-slider-with-price .products::-webkit-scrollbar{
+    display : none  ; 
+  }
+  
+  .product-card{
+    display:flex ; 
+    flex-direction : column;
+    justify-content : end; 
+    min-width: 310px; 
+    background: #fbfbfb ; 
+
+  }
+
+  .product-card img{
+    width : 310px; 
+    margin : 0 50px ; 
+  }
+.product-offer p{
+  background: #be0b3b; 
+  color:#fff; 
+  display : inline-block ; 
+  padding: 2px 5px; 
+  border-radius : 5px;
+}
+
+.product-price{
+  color: gray ; 
+  font-size: 13px; 
+
+}
+.product-card h4{
+  color: #525252;
+  font-size: 15px; 
+  font-weight : 400; 
+}
+
+footer{
+  display: flex; 
+  justify-content: space-between ; 
+  align-items: center ; 
+  color: #fff; 
+  background: #131921; 
+  padding : 20px 60px ; 
+}
+
